fix: style the scrollbar in the side menu

--- a/packages/admin/resources/css/app.css
+++ b/packages/admin/resources/css/app.css
@@ -49,3 +49,23 @@
         top: -1px;
     }
 }
+
+@layer utilities {
+
+    /* Scroll thumb styles */
+    .filament-sidebar-nav::-webkit-scrollbar {
+        width: .2rem;
+    }
+    .filament-sidebar-nav::-webkit-scrollbar-thumb {
+        background-color: transparent;
+        border-radius: 1rem;
+    }
+    .filament-sidebar-nav:hover::-webkit-scrollbar-thumb {
+        background-color: theme('colors.gray.300');
+    }
+    /* Scroll track styles (Background) */
+    .filament-sidebar-nav::-webkit-scrollbar-track {
+        background: transparent;
+        border-radius: 0;
+    }
+}
